--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^1.9.247",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-react-helmet": "^2.0.10",
-    "react-helmet": "^5.2.0",
-    "styled-components": "^3.3.3"
+    "acorn": "^6.4.1",
+    "chokidar": "^3.3.1",
+    "core-js": "^3.6.5",
+    "fsevents": "^2.1.3",
+    "gatsby": "^2.20.29",
+    "gatsby-link": "^2.3.4",
+    "gatsby-plugin-react-helmet": "^3.2.4",
+    "gatsby-source-contentful": "^2.2.9",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.0.0",
+    "react-typography": "^0.16.19",
+    "styled-components": "^5.1.0",
+    "typescript": "^3.8.3",
+    "typography": "^0.16.19"
   },
   "keywords": [
     "gatsby"
@@ -21,7 +31,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.12.0"
+    "prettier": "^2.0.5"
   },
   "repository": {
     "type": "git",
